fix: [LSI-287] headerMain section centre alignment

--- a/src/component/HeaderMainSection/HeaderMainSection.style.scss
+++ b/src/component/HeaderMainSection/HeaderMainSection.style.scss
@@ -99,7 +99,8 @@ main {
     display: flex;
     flex: 1;
     order: 1;
-    padding-bottom: 15px;
+    padding-bottom: 18px;
+    padding-right: 20px;
   }
 
   .HeaderLogo {
@@ -127,7 +128,7 @@ main {
     opacity: 1;
     width: 292px;
     height: 40px;
-    margin-bottom : 33px !important;
+    margin-bottom : 28px;
   }
 
   #searchIconImage {
@@ -540,7 +541,6 @@ main {
 }
 
 .SearchIcon {
-  margin-right: 22px;
   @include mobile {
     margin-right: 56px;
     top: 4px;
